[Bug 23008] Feedback text no longer overlapping coach image

--- a/sass/components/activity/_multiple-choice-view.scss
+++ b/sass/components/activity/_multiple-choice-view.scss
@@ -58,7 +58,6 @@ input[type=checkbox] {
     margin-left: 20px;
   }
   .thumbnail {
-    width: 120px;
     height: 120px;
     margin: 0;
   }
